# articles--2026Posture

./: README.md  pyproject.toml  statistic_notebook.ipynb
data_analysis/: 1_keppN1N2P1P2.py  2_addMeanN1N2P1P2.py  3_propagate-genre.py  4_complete_tmt_jolo.py  5_import-group.py  6_separation_Followup_Enrollment.py  7_addEnrollmentColumns.py  8_mergePgdFesN-P.py  9_durationPD.py  RBDBIOPDCON-Posturaanalysis1_DATA_2026-01-09_1355.csv  RBD_posture_analysis_filtered.csv  compute-gait.py  groups-assignement-GOOD.py  redcap_durationpd.csv
paired_test/: Final_data_frame_filtered_enrollment_pdg_merged_fes_merged_P-N_duration.csv  mapping_Method_to_Code.txt  paired_hypotheses_pipeline.py
paired_test/paired_delta_outputs/: column_rename_map.json  derived_dataset_with_deltas.csv  metadata.json  run_report.json
paired_test/paired_delta_outputs/results_tables/: H1_models.csv  H1_terms.csv  H2_gait_links.csv  H3_primary_moca.csv  H3_secondary_cognition.csv  H4_group_coefficients_on_deltas.csv  H4_group_omnibus_on_deltas.csv  H5_models.csv  H5_terms.csv  H6_LEDD_associations.csv  H7_mixedlm_models.csv  H7_mixedlm_terms.csv  H8_cluster_by_group.csv  H8_cluster_meta.csv  H8_cluster_sizes.csv  H8_cluster_summary.csv  PRIMARY_delta_tests_with_FDR.csv  QC_posture_summary_stats.csv
